--- a/pvp-meta-web/src/index.css
+++ b/pvp-meta-web/src/index.css
@@ -5,9 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: './pvp-meta-logo.png';
+  background-color: purple;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: Berlin Sans FB Demi, source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
